--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "homepage": "https://Khanhvo1981998.github.io/khanhdev",
   "name": "study",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "framer-motion": "^6.0.0",
